--- a/package.json
+++ b/package.json
@@ -2,24 +2,17 @@
 "version":"0.1.0",
 "private":true,
 "dependencies":
-{
-    
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.1.6",
-    "bootstrap": "^5.1.3",
-    
-    "react": "^18.1.0",
-    "react-audio-player": "^0.17.0",
-    "react-bootstrap": "^2.4.0",
-    "react-dom": "^18.1.0",
-
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "react-stripe-checkout": "^2.6.3",
-    "sweetalert2": "^11.4.17",
-    "web-vitals": "^2.1.4"},
+{"@testing-library/jest-dom":"^5.16.4",
+"@testing-library/react":"^11.1.0",
+"@testing-library/user-event":"^13.5.0",
+"axios":"^1.2.2",
+"bootstrap":"^5.2.3",
+"dotenv":"^16.0.3",
+"gh-pages":"^4.0.0",
+"react":"^17.0.2",
+"react-dom":"^17.0.2",
+"react-scripts":"5.0.1",
+"web-vitals":"^2.1.4"},
 "scripts":{
 "predeploy": "npm run build",
 "deploy": "gh-pages -d build",
